# lifetime

./: .gitignore  Cargo.toml  pipeline.sh  publish.sh  readme.md
src/: into_static.rs  lib.rs  to_borrowed.rs
tests/integration/: into_static.rs  main.rs  to_borrowed.rs
tests/macros/: derive_into_static_tests.rs  derive_to_borrowed_tests.rs  main.rs
workspace/macros/: Cargo.toml
workspace/macros/src/: lib.rs
workspace/macros_impl/: Cargo.toml
workspace/macros_impl/src/: generics.rs  ident.rs  into_static.rs  lib.rs  to_borrowed.rs
workspace/proc_macros/: Cargo.toml
workspace/proc_macros/src/: lib.rs
workspace/proc_macros_impl/: Cargo.toml
workspace/proc_macros_impl/src/: generics.rs  lib.rs  modified_clone.rs  to_borrowed.rs  type_.rs
