[package]
name = "lifetime"
version = "0.1.0-beta1"
edition = "2018"
authors = ["Jonas Jebing <noreply.jonas.8049@protonmail.com>"]
license = "MIT OR Apache-2.0"
keywords = ["cow", "IntoStatic", "ToBorrowed", "borrow", "convert"]
categories = ["rust-patterns", "no-std"]
repository = "https://gitlab.com/JonasJebing/lifetime"
documentation = "https://docs.rs/lifetime/"
readme = "readme.md"
description = """
Traits and derive macros to change the lifetime of a type,
allowing efficient reuse of your stucts or enums with any lifetime requirement.
"""

[workspace]
members = ["workspace/macros_impl"]
default-members = ["workspace/macros_impl"]

[features]
default = ["alloc"]
alloc = []
unstable = []

[dependencies]
macros = { path = "workspace/macros", optional = true }

[dev-dependencies]
assert_matches = "1.5"

[package.metadata.docs.rs]
all-features = true
