[package]
name = "macros_impl"
version = "0.1.0-dev"
edition = "2018"
authors = ["Jonas Jebing <noreply.jonas.8049@protonmail.com>"]
license = "MIT OR Apache-2.0"

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["visit"] }

[dev-dependencies]
syn = { version = "1.0", features = ["full", "extra-traits"] }
