[package]
name = "lifetime_proc_macros"
version = "0.1.0-test1"
edition = "2018"
authors = ["Jonas Jebing <noreply.jonas.8049@protonmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://gitlab.com/JonasJebing/lifetime"
documentation = "https://docs.rs/lifetime/"
readme = "../../readme.md"
description = """
Traits and derive macros to change the lifetime of a type,
allowing efficient reuse of your stucts or enums with any lifetime requirement.
"""

[lib]
proc-macro = true

[dependencies]
lifetime_proc_macros_impl = { version = "=0.1.0-test1", path = "../proc_macros_impl" }
syn = "1.0"
